Re-organized namespaces and asmdefs

--- a/Editor/BG.UnityUtils.Editor.asmdef
+++ b/Editor/BG.UnityUtils.Editor.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "BotizenGames.UnityUtils.Editor",
+    "name": "BG.UnityUtils.Editor",
+    "rootNamespace": "BG.UnityUtils.Editor",
     "references": [
         "GUID:9d7a0f084bdc94348b0dcc79709a888a"
     ],
